# metagraph-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp
ExternalProject/: CMakeLists.txt  README.md
data/: README.md
examples/: README.md  basic_query.cpp
subdirectory/: CMakeLists.txt  README.md
